# DL_ML-Reinforcement-learning-12-legged-robot

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  docker-compose_nvidia.yml  docs.Dockerfile  pipeline.Dockerfile  start_to_work.sh
control/real_robot_control/: CMakeLists.txt  dynamixel_subscriber.py  package.xml
control/simulation_control/: CMakeLists.txt  joy_control.py  package.xml
dev/data_extracting_vrep/: CMakeLists.txt  package.xml
dev/rl_agent_network/: CMakeLists.txt  package.xml  requirements.txt
dev/sim_perception_map_first_iter/: README.md  rosdoc.yaml
dev/sim_test_controller/: CMakeLists.txt  package.xml
docker_configs/: dockerfile.sh  install_dependencies.sh  pipeline_entrypoint.sh
docker_configs/dockerfile/: 00-workspace.Dockerfile  10-gpu.Dockerfile  20-ros.Dockerfile  21-coppeliasim.Dockerfile  30-dependencies.Dockerfile  99-run.Dockerfile
docker_configs/dockerfile_archive/: 19-gazebo11_install.Dockerfile  19-gazebo_install_source.Dockerfile  25-iginition_install.Dockerfile
docker_configs/scripts/: cleandocs.sh  gendocs.sh
drivers/: CMakeLists.txt  package.xml
gait_planner/: CMakeLists.txt  package.xml
physical_object/motor_description/: CMakeLists.txt  (+1 more)
physical_object/world_description/: package.xml
physical_object/world_description/launch/: terrain_world.launch
physical_object/world_description/maps/Generated_terrain/: model.config  model.sdf
physical_object/world_description/maps/Ground_plane/: model.sdf
physical_object/world_description/worlds/: testing_area.world  testing_robot_legs.world
(+65 files in other folders)
