<?xml version="1.0"?>
<package format="2">
  <name>world_description</name>
  <version>0.0.0</version>
  <description>The world_description package</description>

 <license>TODO</license>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="aidar@todo.todo">aidar</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/maps"/>
    <gazebo_ros gazebo_media_path="${prefix}/maps"/>
  </export>

</package>
